Remove did label (#140)
* fix(did.controller): no plans to use DID labeling

Best to remove DID labels for now to avoid confusion

* fix(did.controller): remove get verification method

Best to remove get verification method for now to avoid confusion
no plans to implement in the near future
