# apps/vc-api/docs/openapi.json
@@ -43,22 +43,6 @@
         "tags": ["did"]
       }
     },
-    "/v1/did/verification-method/{id}": {
-      "get": {
-        "operationId": "DIDController_getVerificationMethods",
-        "parameters": [{ "name": "id", "required": true, "in": "path", "schema": { "type": "string" } }],
-        "responses": { "200": { "description": "" } },
-        "tags": ["did"]
-      }
-    },
-    "/v1/did/label/{did}": {
-      "post": {
-        "operationId": "DIDController_label",
-        "parameters": [],
-        "responses": { "201": { "description": "" } },
-        "tags": ["did"]
-      }
-    },
     "/v1/vc-api/credentials/issue": {
       "post": {
         "operationId": "VcApiController_issueCredential",
