# apps/vc-api/src/did/did.controller.ts
@@ -50,26 +50,4 @@ export class DIDController {
   async getByDID(@Param('did') did: string): Promise<DIDDocument> {
     return await this.didService.getDID(did);
   }
-
-  /**
-   * Retrieves a verification method
-   * @param id
-   */
-  @Get('/verification-method/:id')
-  async getVerificationMethods(@Param('id') id: string): Promise<VerificationMethod> {
-    throw new Error('Not implemented');
-  }
-
-  /**
-   * Update the descriptive information information related to a DID
-   * "label" is kept in DID module because there is a one to one mapping between a DID and its label
-   * @param did
-   * @param label
-   * @param description
-   * @returns A DIDLabel entity
-   */
-  @Post('/label/:did')
-  async label(did: string, label: string, description: string) {
-    throw new Error('Not implemented');
-  }
 }
